--- a/README.textile
+++ b/README.textile
@@ -2,4 +2,4 @@ h1. Tyco
 
 Tyco helps you to quickly build static websites using "Glitter":glitter.
 
-Check out my "homepage":http://julien.richard-foy.fr as an example of Tyco based web site.
+Check out my "homepage":julienrf as an example of Tyco based web site.
